Check if lists should be modifyable.